# gcat

./: .gitignore  CMakeLists.txt  README.md  common-project-include.in  gcat.c  gcat.h  test.c  wrappers.c
include/: gcat.h  wrappers.h
include_other/: wrappers_tests.h
include_private/: blocks.h  galloc.h  mem.h  types.h  wrappers.h
include_public/: gcat.h
include_test/: gcat.h
include_tests/: blocks_tests.h  galloc_tests.h  gcat_tests.h  mem_tests.h  wrappers_tests.h
lib/: CMakeLists.txt  blocks.c  gcat.c  mem.c
libblocks/: CMakeLists.txt  block_array.c  block_properties.c  blocks.c
libgalloc/: CMakeLists.txt  galloc.c
libmem/: CMakeLists.txt  mem.c
libwrap/: CMakeLists.txt  wrappers.c
src/: gcat.c  test.c  wrappers.c
tests/: CMakeLists.txt  blocks_tests.c  galloc_tests.c  gcat_tests.c  mem_tests.c  test.c  wrappers_tests.c
